# my_rag

./: README.md  compose.yml  start.bat  start.sh
backend/: Dockerfile  main.py  pdf_diagnostic.py  pyproject.toml  quick_test.py  test_upload.py
backend/app/api/routers/: rag.py
backend/app/gradio_ui/: compiled_ui.py  optimize_pipeline.py  retrieve_only_ui.py  ui.py  zero_shot_ui.py
backend/app/utils/: load.py  models.py  rag_functions.py  rag_modules.py
backend/data/chroma_db/: chroma.sqlite3
